# opengl_glitter_simple

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
Headers/: shader.h
Shaders/: 3.3.shader.vs
